syntax = "proto3";

import "server.proto";

package minecraft_service;

message MinecraftServerDefinition {
  ServerDefinition server_definition = 1;
  string game_version = 2;
}

message PaperMcServerDefinition {
  MinecraftServerDefinition minecraft_server_definition = 1;
  PaperMcProject project = 2;
}

enum PaperMcProject {
  Paper = 0;
  Folia = 1;
  Velocity = 2;
  Waterfall = 3;
}
