syntax = "proto3";

import "minecraft_server.proto";
import "server.proto";

package minecraft_service;

service MinecraftServerCreator {
  rpc CreatePaperMcServer (PaperMcServerDefinition) returns (ServerCreateResponse);
}
