syntax = "proto3";

message ServerDefinition {
  string Name = 1;
}

message ServerCreateResponse {
  string id = 1;
}
